--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -41,7 +41,9 @@
                   <th>Irony</th>
                 </tr>
               </thead>
-                
+             <tbody></tbody>
+               
+                </table>
                 
             </section>
         </main>
@@ -58,7 +60,15 @@
                 </div> 
                
         </footer>
-
+        <script>
+            // Check that service workers are supported
+            if ('serviceWorker' in navigator) {
+                // Use the window load event to keep the page load performant
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('/service-worker.js');
+                });
+            }
+           </script>
     </body>
 </html>
 
