--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -1,11 +1,8 @@
-$bg_form: #EEE2DC;
-//#bfc5cf;
+$bg_form: #eee2dc;
 $text_light: #fff;
-$text_table:#123C69;
-$bg: #AC3B61;
+$text_table: #123c69;
+$bg: #ac3b61;
 
-//#E27D60
-//#C38D9E
 
 form {
     border: 1px solid #545454;
@@ -14,38 +11,36 @@ form {
     padding-bottom: 30px;
     background-color: $bg_form;
 }
-label{
 
-    color: $text_table;
-}
-
-input{
-padding-top: 10px;
-width:30%;
-    background-color:$bg;
+input {
+    padding-top: 10px;
+    width: 30%;
+    background-color: $bg;
     height: 45px;
     color: $text_light;
     text-transform: uppercase;
     font-weight: bold;
-
 }
+#label__input {
+    font-weight: bold;
+    color: $text_table;
+}
+
 textarea {
     padding: 5px 20px;
     width: 100%;
     line-height: 16px;
-   
+
     min-width: 100%;
     font-style: oblique;
     margin-top: 20px;
 }
 
-#label__results{
+#label__results {
     font-weight: bold;
     color: $text_table;
-    
 }
-.form__input{
-
+.form__input {
     padding-bottom: 20px;
 }
 
@@ -54,50 +49,49 @@ table {
     border-collapse: collapse;
     min-width: 100%;
     color: $text_table;
-    grid-template-columns: 
-      minmax(150px, 1fr)
-      minmax(150px, 1fr)
-      minmax(150px, 1fr)
-      minmax(150px, 1fr)
-      minmax(150px, 1fr)
-     
-  }
-  
-  thead,
-  tbody,
-  tr {
+    grid-template-columns:
+        minmax(150px, 1fr)
+        minmax(150px, 1fr)
+        minmax(150px, 1fr)
+        minmax(150px, 1fr)
+        minmax(150px, 1fr);
+}
+
+thead,
+tbody,
+tr {
     display: contents;
-  }
-  
-  th,
-  td {
+}
+
+th,
+td {
     padding: 15px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
- 
-  }
-  td{
+}
+td {
     text-transform: lowercase;
-    //margin: 50px auto 0px;
-  }
-  
-  th {
+}
+
+th {
     position: sticky;
     top: 0;
-    background:$bg;
+    background: $bg;
     text-align: left;
     font-weight: normal;
     font-size: 1.1rem;
     color: white;
     position: relative;
-  }
-  
-  th:last-child {
-    border: 0;
-  }
+    font-weight: bold;
+    letter-spacing: 0.1em;
+}
 
-  #msg {
+th:last-child {
+    border: 0;
+}
+
+#msg {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -106,8 +100,51 @@ table {
     letter-spacing: 0.05em;
     text-align: center;
     color: $bg;
-    ///$text_table ;
-    padding-bottom: 5px;;
-  }
+    padding-bottom: 5px;
+}
 
- 
+@media screen and (min-width: 629px) and (max-width: 690px) {
+    table {
+        display: grid;
+        border-collapse: collapse;
+        min-width: 100%;
+        color: $text_table;
+        grid-template-columns: 1.5fr 1.5fr 1.5fr 1.5fr 1.5fr;
+    }
+    th,
+    td {
+        font-size: 14px;
+    }
+}
+
+@media screen and (min-width: 560px) and (max-width: 629px) {
+    table {
+        display: grid;
+        border-collapse: collapse;
+        min-width: 100%;
+        color: $text_table;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
+    th,
+    td {
+        font-size: 13px;
+    }
+}
+
+@media screen and (min-width: 500px) and (max-width: 559px) {
+    table {
+        display: grid;
+        border-collapse: collapse;
+        min-width: 100%;
+        color: $text_table;
+        grid-template-columns: 1.2fr 1.2fr 1.2fr 1.2fr 1.2fr;
+    }
+    th,
+    td {
+        font-size: 11.5px;
+    }
+    .heading {
+        font-size: 1.5em;
+        text-align: center;
+    }
+}
