third  commit,formatter works on files using webformatter

--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,6 +1,4 @@
-
-
-$text_header:#123C69;
+$text_header: #123c69;
 $text_med: #53627c;
 
 $red: #ff1e42;
@@ -17,8 +15,8 @@ header {
     font-size: 3rem;
     letter-spacing: 0.02em;
     padding: 0 0 20px 0;
-  }
+}
 
-  .top {
+.top {
     color: $text_header;
-  }
+}
