--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,6 +1,6 @@
-$bg_main: #EDC7B7;
-//#132747;
+$bg_main: #edc7b7;
 $text_dark: #1e2432;
+
 body {
     display: flex;
     flex-direction: column;
@@ -13,17 +13,16 @@ main {
 
 section.form__input {
     max-width: 800px;
-   margin: 50px auto 0px ;
+    margin: 50px auto 0px;
 }
 
 section.form__result {
     max-width: 800px;
-   margin: 10px auto 0px ;
+    margin: 10px auto 0px;
 }
-
 
 body {
     font: 1rem/1.3 "Roboto", sans-serif;
     background: $bg_main;
     color: $text_dark;
-  }
+}
