--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -1,9 +1,12 @@
-$bg_form: #eee2dc;
+$bg_form: #F7F9FB;
 $text_light: #fff;
 $text_table: #123c69;
-$bg: #ac3b61;
+$bg: #5085A5;
 
-
+.dest__card {
+    background-color: $bg_form;
+    margin-bottom: 100px;
+}
 form {
     border: 1px solid #545454;
     border-radius: 3px;
@@ -12,29 +15,40 @@ form {
     background-color: $bg_form;
 }
 
-input {
+#input__dest {
     padding-top: 10px;
     width: 30%;
-    background-color: $bg;
+    //background-color: $bg;
     height: 45px;
-    color: $text_light;
-    text-transform: uppercase;
+    color: $text_table;
+   // text-transform: uppercase;
     font-weight: bold;
 }
-#label__input {
+
+#input__date{
+    padding-top: 10px;
+   // width: 30%;
+    //background-color: $bg;
+    height: 45px;
+    color: $text_table;
+   text-transform: uppercase;
+    font-weight: bold;
+}
+#input__submit{
+    padding-top: 10px;
+  // width: 25%;
+    background-color: $bg;
+    height: 42px;
+    color: $text_light;
+   text-transform: uppercase;
+    font-weight: bold;
+}
+#label__input__dest{
     font-weight: bold;
     color: $text_table;
 }
 
-textarea {
-    padding: 5px 20px;
-    width: 100%;
-    line-height: 16px;
 
-    min-width: 100%;
-    font-style: oblique;
-    margin-top: 20px;
-}
 
 #label__results {
     font-weight: bold;
@@ -44,52 +58,7 @@ textarea {
     padding-bottom: 20px;
 }
 
-table {
-    display: grid;
-    border-collapse: collapse;
-    min-width: 100%;
-    color: $text_table;
-    grid-template-columns:
-        minmax(150px, 1fr)
-        minmax(150px, 1fr)
-        minmax(150px, 1fr)
-        minmax(150px, 1fr)
-        minmax(150px, 1fr);
-}
 
-thead,
-tbody,
-tr {
-    display: contents;
-}
-
-th,
-td {
-    padding: 15px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-td {
-    text-transform: lowercase;
-}
-
-th {
-    position: sticky;
-    top: 0;
-    background: $bg;
-    text-align: left;
-    font-weight: normal;
-    font-size: 1.1rem;
-    color: white;
-    position: relative;
-    font-weight: bold;
-    letter-spacing: 0.1em;
-}
-
-th:last-child {
-    border: 0;
-}
 
 #msg {
     display: flex;
@@ -99,9 +68,331 @@ th:last-child {
     font-size: medium;
     letter-spacing: 0.05em;
     text-align: center;
-    color: $bg;
+    color: $text_table;
     padding-bottom: 5px;
 }
+
+
+/**************/
+a {
+    background-color: goldenrod;
+    text-decoration: none;
+    color: white;
+    border-radius: .25rem;
+    text-align: center;
+    display: inline-block;
+    transition: all .3s;
+  }
+  
+  a:hover {
+    opacity: .6;
+  }
+  
+  //.dest__card {
+    //padding: 1rem;
+  //}
+  
+  .dest__card > ul {
+    display: grid;
+    //grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 1rem;
+  }
+  
+  .dest__card > ul > li {
+    border: 1px solid #E2E2E2;
+    box-shadow: 0 6px 20px rgb(245, 241, 241);
+    border-radius: .5rem;
+  }
+  
+  .dest__card > ul > li > figure {
+  
+    //overflow: hidden;
+    border-top-left-radius: .5rem;
+    border-top-right-radius: .5rem;
+    position: relative;
+  }
+  
+  .dest__card  img {
+   width: 100%;
+   border-top-left-radius: calc(.25rem - 1px);
+   border-top-right-radius: calc(.25rem - 1px);
+   
+  }
+  
+  img {
+    max-height: 300px;
+    vertical-align: middle;
+    border-style: none;
+  }
+  .dest__card > ul > li > figure > #country__figurecaption {
+   position: absolute;
+   bottom: 0;
+    background-color: rgba(97, 94, 94, 0.7);
+    width: 100%;
+    color: #E2E2E2;
+    
+  }
+  h3{
+      margin-left: 12px;
+      padding-bottom: 1em;
+      padding-top: 1em;
+  }
+
+  //.dest__card > ul > li > figure > figcaption > h3 {
+   // color: white;
+   // padding: .75rem;
+   // font-size: 1.5rem;
+    //padding-left: 12px;
+
+ // }
+/*
+  .dest__card > ul > li > figure > figcaption {
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(0,0,0,.7);
+    width: 100%;
+  }*/
+  
+  .dest__card > ul > li > figure > figcaption > h3 {
+    color: white;
+    //$text_table;
+    padding: .75rem;
+    font-size: 1.25rem;
+  }
+  
+  
+  .dest__card > ul > li > p {
+    font-size: 1rem;
+    line-height: 1.5;
+    padding: 1rem .75rem;
+    color: #666666;
+  }
+  
+  .dest__card > ul > li > a {
+    padding: .5rem 1rem;
+    margin: .5rem;
+  }
+
+  #days__count{
+
+    display: block;
+    font-weight: bold;
+    margin-left: 12px;
+    margin-block-start: 1.5em;
+    
+   
+  }
+
+  #content:after {
+    
+        content: "";
+        display: table;
+        clear: both;
+        width: 300px;
+       
+ }
+ 
+ /*#left, #right {
+    display: inline-block;
+    width: 45%;
+    height: 100%;
+ }*/
+#left{
+   float: left;
+    width: 12%;
+ 
+    
+}
+#right{
+    float: left;
+    width: 60%;
+   
+    margin-right: 130px;
+}
+
+  #weather__description {
+    margin-top: 5px;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    margin-top: 5px;
+    padding-bottom: 3px;
+    text-align: left;
+    margin-left: 12px;
+     
+  }
+
+ 
+ 
+
+#country__temperature{
+    margin-block-start: 1em;
+    margin-left: 12px;
+    size: 12px;
+
+  }
+
+  #weather__icon {
+    margin-top: 5px;
+    width: 70px;
+    height: 70px;
+    align-content: center;
+  }
+
+  table {
+    position: relative;
+    top: 30px;
+    width: 100%;
+    text-align: center;
+   
+}
+#temp__table img{
+    margin-top: 5px;
+    width: 50px;
+    height: 50px;
+    align-content: center;
+
+}
+ // p {
+   // display: block;
+  //  margin-block-start: 1em;
+  //  margin-block-end: 1em;
+  //  margin-inline-start: 0px;
+   // margin-inline-end: 0px;
+   // }
+ /* .btn-sm {
+    padding: .25rem .5rem;
+    font-size: .875rem;
+    line-height: 1.5;
+    border-radius: .2rem;
+    }*/
+
+  /*.btn-group, .btn-group-vertical {
+    position: relative;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    vertical-align: middle;
+    }
+
+
+    .btn-outline-secondary {
+        color: #6c757d;
+        background-color: transparent;
+        background-image: none;
+        border-color: #6c757d;
+        }*/
+
+        #btn {
+           
+            font-weight: 400;
+            text-align: center;
+            white-space: nowrap;
+            vertical-align: middle;
+            //background-color: transparent;
+            background-color: $bg;
+            background-image: none;
+            margin-top: 15px;
+            border: 1px solid transparent;
+            padding: .375rem .75rem;
+            font-size: 1rem;
+            line-height: 1.5;
+            border-radius: .25rem;
+            display: none;
+            transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+            }
+
+            #btn:hover{
+                //z-index: 1;
+                color: $text_table;
+                background-color: #276397;
+                border-color: #e1e7ec;
+            }
+             .main__grid {
+                        display: grid;
+                       // grid-template-columns: repeat(3, 1fr);
+                       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+                        grid-gap: 1rem;
+                        grid-template-rows: auto;
+                       
+                      }
+                      
+                      .card {
+                        display: flex;
+                        flex-wrap: wrap;
+                        flex-direction: column;
+                        padding: 20px 10%;
+                        border-radius: 20px;
+                        background: var(--text_light);
+                        color: var(--text_med);
+                        box-shadow: 0 6px 20px rgb(245, 241, 241);
+                        min-height: 100%;
+                        margin-left: 15px;
+                        top: 0;
+                        transition: all 0.1s ease-in;
+                        max-width: 350px;
+                      }
+                      
+                      .main__grid img{
+
+                        
+                            width: 100%;
+                            height: 200px;
+                            object-fit: cover;
+                          
+                      }
+                      .main__grid .city__temp {
+                        font-size: 4rem;
+                        font-weight: bold;
+                        margin-top: 10px;
+                        color: var(--text_dark);
+                      }
+                      
+                      .main__grid .city__name {
+                        font-size: 1.5rem;
+                        font-weight: bold;
+                        color: var(--text_dark);
+                      }
+                      
+                   /*   .main__grid figcaption {
+                        margin-top: 10px;
+                        text-transform: uppercase;
+                        letter-spacing: 0.05em;
+                        margin-top: 5px;
+                        padding-bottom: 10px;
+                        align-content: center;
+                      }*/
+                      .main__grid .city__temp sup {
+                        font-size: 0.5em;
+                      }
+                      .main__grid .weather__icon {
+                        margin-top: 5px;
+                        width: 70px;
+                        height: 70px;
+                        align-content: center;
+                      }
+                      
+                      .card__item {
+                        display: flex;
+                        flex-direction: column;
+                        background-color: #fff;
+                        padding: 1em;
+                        width: 100%;
+                        /*flex: 1;*/
+                      }
+                      .card__item p {
+                        flex: 1;
+                        line-height: 1.4;
+                        padding-top: 4px;
+                        letter-spacing: 0.05em;
+                      }
+                      
+                      .card__item h3 {
+                        text-align: center;
+                        background-color: var(--red);
+                        font-weight: bold;
+                        padding-top: 6px;
+                        color: #fff;
+                      }
 
 @media screen and (min-width: 629px) and (max-width: 690px) {
     table {
@@ -148,3 +439,6 @@ th:last-child {
         text-align: center;
     }
 }
+
+
+
