--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -8,6 +8,9 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 10px 40px;
+    background: url('../media/travel.png')  ; 
+    height: 180px;
+    
 }
 
 .heading {
