--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,13 +1,14 @@
 $bg_main: #5085A5;
-
-//
 $text_dark:#fff;
-//#1e2432;
+
+
 
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    width: 100%; 
+    height: 100vh; 
+  
 }
 
 main {
@@ -17,11 +18,13 @@ main {
 section.form__input {
     max-width: 800px;
     margin: 50px auto 0px;
+    padding-bottom: 5px;
 }
 
 section.form__result {
     max-width: 800px;
     margin: 10px auto 0px;
+    
 }
 
 body {
